Refactor: replace DUO provider-specific MFA classes with generic configurable ones